--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.14.0",
     "knex": "^0.12.9",
     "morgan": "^1.7.0",
-    "pg": "^6.1.5"
+    "pg": "^6.1.5",
+    "treeize": "^2.0.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -25,4 +26,3 @@
     "nodemon": "^1.11.0"
   }
 }
-
